Fix progress indicator overflowing knob handle and factorize

--- a/src/app/components/questions/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/components/questions/drag-and-drop/drag-and-drop.component.scss
@@ -53,34 +53,6 @@
   margin-top: 1em;
   overflow: hidden;
 
-  &-progress{
-    padding: 0 1rem;
-    --knob-size:0;
-    --bar-height:10px;
-    --bar-border-radius:5px;
-
-    &::part(bar){
-      background: var(--ion-color-inria-light);
-    }
-
-    &::part(bar-active){
-      background: var(--ion-color-inria-spe);
-    }
-
-    &::part(tick), &::part(tick-active){
-      top: calc((var(--height) - var(--bar-height) + 4px) / 2);
-      width: calc(var(--bar-height) - 4px);
-      height: calc(var(--bar-height) - 4px);
-      border-radius: 50%;
-      background: #D0D7E1;
-      transform: translateX(calc(-100% - 4px));
-    }
-
-    &::part(tick-active){
-      background: white;
-    }
-  }
-
   &-instruction{
     display: flex;
     align-items: center;
